# rustapi

./: LICENSE  README.md
.github/workflows/: rust-ci.yml
roster/: .env  Cargo.toml
roster/migrations/2023-12-31-165543_create_player/: down.sql  up.sql
roster/src/: db.rs  main.rs  models.rs  schema.rs
