[package]
name = "roster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
cargo-watch = "8.4.1"
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.123"
thiserror = "1.0.53"
anyhow = "1.0.78"
tokio = "1.35.1"
